# cpp_neural_net

./: CMakeCache.txt  CMakeLists.txt  README.md
include/: NNInterface.hpp
src/: CMakeLists.txt  main.cpp
